--- a/0. why?.md
+++ b/0. why?.md
@@ -11,3 +11,36 @@
 
 ### 클린코드는 코드 수정을 쉽게 할 수 있게 만들어줍니다.
 클린코드를 통한 리팩토링으로 코드를 수정할 때도 복잡한 절차를 걸치지 않고 수정할 수 있게 해줍니다.
+
+
+
+# example - before 
+```java
+public class Main(){
+  public static void main(String[] args){
+    Robot actionrobot = new Robot();
+    actionrobot.takeaction(0); // walk
+    actionrobot.takeaction(1); // stop
+    actionrobot.takeaction(2); // jump
+  }
+}
+```
+객체의 이름과 메소드명이 모두 소문자로 되어있어 가독성이 떨어지고 메소드에서 무엇을 하는지 잘 알아볼 수 없습니다.
+
+# example - after
+```java
+public class Main(){
+
+  int COMMAND_WALK = 0;
+  int COMMAND_STOP = 1;
+  int COMMAND_JUMP = 2;
+  
+  public static void main(String[] args){
+    Robot actionRobot = new Robot();
+    actionRobot.action(COMMAND_WALK); 
+    actionRobot.action(COMMAND_STOP); 
+    actionRobot.action(COMMAND_JUMP); 
+  }
+}
+```
+객체의 이름과 메소드명의 가독성이 좋아졌고 주석없이도 메소드에서 어떤 동작을 수행하는지 알아볼 수 있습니다.
